Add spring security login